Adding bson as a dependency

--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "gulp-watch": "^0.5.4",
     "jshint-stylish": "^0.1.5",
     "should": "^3.3.0",
-    "zombie": "^2.0.0-alpha9"
+    "zombie": "^2.0.0-alpha9",
+    "bson": "~0.2.11"
   }
 }
